# Bare-OS-USER-TEMPLATE

./: BareOS_Kernel_import.cmake  CMakeLists.txt  blink.c  output  run
